feats(pkg-cloudinary): ajout de paramètres dynamique pour l'upload des vidéos

--- a/pkg/other/cloudinary/static/css/desktop.css
+++ b/pkg/other/cloudinary/static/css/desktop.css
@@ -75,6 +75,15 @@
     .footer {
         height: 5vh;
     }
+
+    .link {
+        text-decoration: none;
+        color: darkblue;
+    }
+
+    .link:hover, link:active {
+        text-decoration: underline;
+    }
 }
 
 /* Big screen */
