feats(pkg-cloudinary): présentation du fonctionnement de l'api via page html

--- a/pkg/other/cloudinary/views/index.html
+++ b/pkg/other/cloudinary/views/index.html
@@ -51,10 +51,23 @@
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="#fff" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-video">
                     <path d="m16 13 5.223 3.482a.5.5 0 0 0 .777-.416V7.87a.5.5 0 0 0-.752-.432L16 10.5"/><rect x="2" y="6" width="14" height="12" rx="2"/></svg>
             </div>
-            <h1 class="title-color title-font title-size title-margin">Etape 2 - Stocker</h1>
-            <p class="para-color para-font para-size para-margin">En appelant <code class="code">/upload-videos?url=your-video-url.mp4</code> depuis Tech Race, tu peux déclencher l'export sur Cloudinary des vidéos prises par ton freenov Car.</p>
+            <h1 class="title-color title-font title-size title-margin">Etape 2 - Créer</h1>
+            <p class="para-color para-font para-size">Assure-toi que dans Tech Race, la vidéo ait bien été créé : ton application te dira si la vidéo est prête.</p>
+            <p class="para-color para-font para-size">Tu es donc prêt à utiliser ce service : pense au nom que tu donnes à ta vidéo, ce sera son id.</p>
+        </article>
+
+        <article class="card card-color-3 card-3">
+            <div class="icon-container">
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="#fff" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-library-big"><rect width="8" height="18" x="3" y="3" rx="1"/><path d="M7 3v18"/>
+                    <path d="M20.4 18.9c.2.5-.1 1.1-.6 1.3l-1.9.7c-.5.2-1.1-.1-1.3-.6L11.1 5.1c-.2-.5.1-1.1.6-1.3l1.9-.7c.5-.2 1.1.1 1.3.6Z"/></svg>
+            </div>
+            <h1 class="title-color title-font title-size title-margin">Etape 3 - Stocker</h1>
+            <p class="para-color para-font para-size">En appelant <code class="code">/upload-videos?url=your-video-url.mp4</code> depuis Tech Race, tu peux déclencher l'export sur Cloudinary des vidéos prises par ta voiture.</p>
+            <p class="para-color para-font para-size">Teste avec cette vidéo fake&nbsp;:<br>
+                <code class="code">http://localhost:8090/upload-video?url=https://res.cloudinary.com/demo/video/upload/wave.mp4&id=quickstart_wave</code><br><br> Vas voir le résultat sur Cloudinary !</p>
 
         </article>
+
     </div>
 
 </main>
