--- a/pkg/other/cloudinary/static/css/desktop.css
+++ b/pkg/other/cloudinary/static/css/desktop.css
@@ -4,7 +4,7 @@
 
 
     .main-page {
-        height: 95vh;
+        height: 100vh;
         position: relative;
         display: grid;
         justify-content: center;
@@ -12,19 +12,6 @@
         grid-template-columns: 1fr minmax(45rem, 3fr) 1fr;
         grid-template-rows: 1fr auto 1fr;
         row-gap: 50px;
-    }
-
-    .title-container {
-        background-color: var(--Very-dark-cyan);
-        padding: var(--first-level-space);
-        grid-row: 1;
-        grid-column: 2 / 3;
-        width: 100%;
-        height: auto;
-
-        display: flex;
-        flex-direction: column;
-        gap: 10px;
     }
 
     .cards-container {
@@ -45,7 +32,7 @@
         border-radius: 10px 0 0 10px;
     }
 
-    .card-2 {
+    .card-3 {
         border-radius: 0 10px 10px 0;
     }
 
@@ -54,6 +41,8 @@
     }
 
     .card {
+        min-width: 200px;
+        max-width: 500px;
         position: relative;
         width: 100%;
         height: 100%;
@@ -68,12 +57,12 @@
 
     }
 
-    .card button {
+    .card .btn-form {
         flex-grow: 0;
-    }
-
-    .footer {
-        height: 5vh;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        text-align: center;
     }
 
     .link {
