--- a/pkg/other/cloudinary/static/css/main.css
+++ b/pkg/other/cloudinary/static/css/main.css
@@ -1,6 +1,3 @@
-@import 'css/variables.css';
-@import 'css/reset.css';
-
 /* --main page-- */
 
 .main-page {
@@ -15,6 +12,8 @@
 }
 
 .code {
+    word-break: break-all;
+    hyphens: auto;
     color: mediumseagreen;
 }
 
@@ -55,6 +54,10 @@
 
 .card-color-2 {
     background-color: var(--Dark-cyan);
+}
+
+.card-color-3 {
+    background-color: var(--Very-dark-cyan);
 }
 
 /* -headings styles- */
@@ -143,4 +146,17 @@
 
 .attribution a {
     color: hsl(228, 45%, 44%);
+}
+
+.title-container {
+    background-color: var(--Very-dark-cyan);
+    padding: var(--first-level-space);
+    grid-row: 1;
+    grid-column: 2 / 3;
+    width: 100%;
+    height: auto;
+
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
 }
