--- a/pkg/other/cloudinary/static/css/desktop.css
+++ b/pkg/other/cloudinary/static/css/desktop.css
@@ -2,14 +2,25 @@
 /* For Desktop and tablets */
 @media screen and (min-width:768px) {
 
+    body {
+        background-color: var(--Very-light-gray);
+        max-width: 100vw;
+        padding: 0 10rem;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+
 
     .main-page {
+        width: 100%;
         height: 100vh;
         position: relative;
         display: grid;
         justify-content: center;
         align-items: center;
-        grid-template-columns: 1fr minmax(45rem, 3fr) 1fr;
+        grid-template-columns: minmax(1fr, 50px) minmax(45rem, 3fr) minmax(1fr, 50px);
         grid-template-rows: 1fr auto 1fr;
         row-gap: 50px;
     }
@@ -75,10 +86,3 @@
     }
 }
 
-/* Big screen */
-@media screen and (min-width:1700px) {
-
-    .main-page {
-        grid-template-columns: 1fr 1fr 1fr;
-    }
-}
