build: amélioration du package cloudinary et création d'un makefile pour gestion des commandes

--- a/pkg/other/cloudinary/views/index.html
+++ b/pkg/other/cloudinary/views/index.html
@@ -30,7 +30,7 @@
 
     <div class="title-container">
         <h1 class="title-color title-font title-size title-margin">Cloudinarace</h1>
-        <p class="para-color para-font para-size para-margin">L'API de Tech Race pour l'export et stockage des vidéos</p>
+        <p class="para-color para-font para-size">L'API de Tech Race pour l'export et stockage des vidéos</p>
     </div>
 
     <div class="cards-container card-container-form">
