feat(views): change favicon and html title

--- a/views/index.html
+++ b/views/index.html
@@ -20,7 +20,7 @@
     <link rel="stylesheet" href="../static/css/main.css" type="text/css">
     <link rel="stylesheet" href="../static/css/desktop.css" type="text/css">
 
-    <title>Cloudinarace</title>
+    <title>Tech-race - la course des héros</title>
 
 </head>
 
