--- a/pkg/other/cloudinary/views/index.html
+++ b/pkg/other/cloudinary/views/index.html
@@ -30,7 +30,7 @@
 
     <div class="title-container">
         <h1 class="title-color title-font title-size title-margin">Cloudinarace</h1>
-        <p class="para-color para-font para-size">L'API de Tech Race pour l'export et stockage des vidéos</p>
+        <p class="para-color para-font para-size">L'API de Tech Race pour l'export et stockage des vidéos via Cloudinary</p>
     </div>
 
     <div class="cards-container card-container-form">
@@ -42,8 +42,8 @@
             </div>
             <h1 class="title-color title-font title-size title-margin">Etape 1 - s'inscrire</h1>
             <p class="para-color para-font para-size para-margin">Avec Cloudinarace, stocke les vidéos prisent par ta voiture sur Cloudinary !
-                Pour cela tu dois avoir un compte cloudinary. Configure la cloudinary_url et id dans le <code class="code">.env</code> de <a class="link" href="https://github.com/NasssDev/Tech-Race/tree/main/pkg/other/cloudinary">ce package</a> dans <i>Tech Race</i>.</p>
-            <a type="button" href="https://cloudinary.com/users/register_free" class="btn-text-color-3 btn-size btn-font btn-form">Créer mon compte</a>
+                Si tu es là c'est que tu a un compte Cloudinary renseigné dans les variables d'environnements. Si ce n'est pas ton propre compte : configure la cloudinary_url et l'id dans le <code class="code">.env</code> de <a class="link" href="https://github.com/NasssDev/Tech-Race/tree/main/pkg/other/cloudinary">ce package</a> dans <i>Tech Race</i>.</p>
+            <a type="button" href="https://cloudinary.com/users/login" class="btn-text-color-3 btn-size btn-font btn-form">Mon compte Cloudinary</a>
         </article>
 
         <article class="card card-color-2 card-2">
@@ -53,7 +53,8 @@
             </div>
             <h1 class="title-color title-font title-size title-margin">Etape 2 - Créer</h1>
             <p class="para-color para-font para-size">Assure-toi que dans Tech Race, la vidéo ait bien été créé : ton application te dira si la vidéo est prête.</p>
-            <p class="para-color para-font para-size">Tu es donc prêt à utiliser ce service : pense au nom que tu donnes à ta vidéo, ce sera son id.</p>
+            <p class="para-color para-font para-size">Si tu as une vidéo: crée ou utilise un nouveau service sur Tech Race pour l'export de vidéos sur un cloud. Utilise alors ce package pour les exports sur cloudinary.</p>
+            <p class="para-color para-font para-size">Regarde l'étape 3 pour savoir quoi passer dans les query strings pour exporter ta vidéo sur cloudinary.</p>
         </article>
 
         <article class="card card-color-3 card-3">
@@ -62,7 +63,8 @@
                     <path d="M20.4 18.9c.2.5-.1 1.1-.6 1.3l-1.9.7c-.5.2-1.1-.1-1.3-.6L11.1 5.1c-.2-.5.1-1.1.6-1.3l1.9-.7c.5-.2 1.1.1 1.3.6Z"/></svg>
             </div>
             <h1 class="title-color title-font title-size title-margin">Etape 3 - Stocker</h1>
-            <p class="para-color para-font para-size">En appelant <code class="code">/upload-videos?url=your-video-url.mp4</code> depuis Tech Race, tu peux déclencher l'export sur Cloudinary des vidéos prises par ta voiture.</p>
+            <p class="para-color para-font para-size">Tu as besoin de l'url de la vidéo en mp4 et d'un id unique pour chaque vidéo que tu génère.</p>
+            <p class="para-color para-font para-size">En appelant <code class="code">/upload-videos?url=your-video-url.mp4&id=your-video-id</code> depuis Tech Race, tu peux déclencher l'export sur Cloudinary des vidéos prises par ta voiture.</p>
             <p class="para-color para-font para-size">Teste avec cette vidéo fake&nbsp;:<br>
                 <code class="code">http://localhost:8090/upload-video?url=https://res.cloudinary.com/demo/video/upload/wave.mp4&id=quickstart_wave</code><br><br> Vas voir le résultat sur Cloudinary !</p>
 
