--- a/views/docs.html
+++ b/views/docs.html
@@ -28,59 +28,70 @@
 </head>
 
 <body>
-
-<main class="main-page">
-
-  <div class="title-container">
-    <h1 class="title-color title-font title-size title-margin">Documentation</h1>
-    <div class="flex gap-5 my-5">
-      <a href="/" class="font-lexend text-transparent-white text-lg hover:text-white">Accueil</a>
-      <a href="#install" class="font-lexend text-transparent-white text-lg hover:text-white">Installation</a>
-      <a href="#api" class="font-lexend text-transparent-white text-lg hover:text-white">Routes API</a>
-      <a href="#demos" class="font-lexend text-transparent-white text-lg hover:text-white">Demos</a>
-      <a href="#services" class="font-lexend text-transparent-white text-lg hover:text-white">Services</a>
-      <a href="#legal" class="font-lexend text-transparent-white text-lg hover:text-white">Legal</a>
+<header class="title-container md:mx-4 fixed top-0">
+  <h1 class="title-color title-font title-size title-margin">Documentation</h1>
+  <div class="flex gap-5 my-5">
+    <a href="/" class="font-lexend text-transparent-white text-lg hover:text-white">Accueil</a>
+    <a href="#install" class="font-lexend text-transparent-white text-lg hover:text-white">Installation</a>
+    <a href="#api" class="font-lexend text-transparent-white text-lg hover:text-white">Routes API</a>
+    <a href="#demos" class="font-lexend text-transparent-white text-lg hover:text-white">Demo</a>
+    <a href="#services" class="font-lexend text-transparent-white text-lg hover:text-white">Services</a>
+    <a href="#legal" class="font-lexend text-transparent-white text-lg hover:text-white">Legal</a>
+  </div>
+</header>
+<main class="docs-page md:px-4 pt-[242px]">
+  <section class="bg-header w-full flex items-start justify-center h-screen pb-12">
+    <div class="mt-5 font-lexend mx-4 p-4 text-center md:p-8 aspect-video w-96 rounded-xl bg-white/20 shadow-lg ring-1 ring-black/5">
+      <p class="italic text-sm">
+        November 1, 2019
+      </p>
+      <h1 class="text-5xl uppercase">
+        Article Title
+      </h1>
+      <p class="text-lg">
+        Author Name
+      </p>
     </div>
+  </section>
+
+  <div class="w-full font-lexend leading-normal mx-auto py-12 px-4 max-w-lg">
+    <p class="mb-6 text-xl md:text-2xl uppercase">This is a simple parallax effect created by setting the background attachment property to a fixed position. This technique is not meant for non-decorative images, videos, etc. as those require additional HTML and CSS to work properly.</p>
+    <p class="mb-4 text-lg">Quae commodi reiciendis dignissimos. Rerum molestiae hic dolores assumenda dolor! Corrupti reiciendis maxime fuga, recusandae obcaecati officia cum temporibus dicta quibusdam praesentium, magni, cumque aperiam iusto sequi illum molestiae non.</p>
+    <p class="mb-4 text-lg">In excepturi repellendus eum, qui corrupti rerum perferendis harum adipisci voluptate? Nihil, quidem deleniti libero officia dicta vel asperiores velit molestiae blanditiis, dolore voluptatibus excepturi laudantium at veniam illo. Dolor!</p>
+    <p class="mb-4 text-lg">Neque laudantium minus doloremque id quas quod sint velit corporis unde dolore accusantium delectus optio consequuntur voluptatem sapiente odit dolorum minima harum tenetur, dolor provident reprehenderit. Ex eum provident harum?</p>
+    <p class="mb-4 text-lg">Mollitia temporibus maxime placeat culpa distinctio possimus, praesentium, assumenda quasi eum voluptate magni aspernatur aperiam. Eius voluptates rem eum, facilis inventore hic provident pariatur nam non! At odit iste cum.</p>
+    <p class="mb-4 text-lg">Cumque voluptatibus laboriosam tempore architecto laudantium sint vitae cupiditate voluptate quod tempora saepe odio quasi dolores possimus non totam unde voluptates corrupti, ducimus ipsa enim officiis ipsum maxime eveniet. Aut!</p>
+    <p class="mb-4 text-lg">Maxime facere ut natus libero incidunt alias quam consectetur, nisi delectus exercitationem ab qui perferendis dolorem sequi veritatis nobis eius quas dolore ducimus atque vel. Doloribus mollitia non pariatur modi?</p>
+    <p class="mb-4 text-lg">Sed in amet a neque, delectus, cupiditate ab assumenda quidem facere molestias vitae itaque soluta reprehenderit dolorem. Deserunt quibusdam, consequatur veniam fugiat ipsam aliquam ea possimus quis officiis enim dolores.</p>
+    <p class="mb-4 text-lg">Exercitationem aperiam veniam perspiciatis iure ad nobis necessitatibus cumque cupiditate obcaecati natus. Neque nostrum maxime id veritatis tempore, a voluptate voluptatem et! A ullam id aliquam? Recusandae deleniti odit fugit!</p>
+    <p class="mb-4 text-lg">Beatae rerum obcaecati consectetur nostrum eos ipsam, accusamus delectus ex maxime neque sit quod repellendus voluptate sunt dolore hic explicabo ea dolorum vero vel quidem illo! Cupiditate sed voluptatibus ullam?</p>
+    <p class="mb-4 text-lg">Modi aliquam facilis adipisci! Soluta eveniet eos omnis, inventore nesciunt, laborum deserunt blanditiis nihil accusamus debitis voluptatibus possimus dolores vero maiores, sed voluptate ut! Facilis possimus vitae consectetur praesentium veritatis.</p>
+    <p class="mb-4 text-lg">Tempore, quaerat accusamus ad nostrum maiores numquam, ea nam sed reiciendis, eveniet perspiciatis. Eos nulla vel consectetur quo nesciunt aspernatur sint nemo cumque optio mollitia, veritatis, tenetur quibusdam eum natus.</p>
   </div>
 
-  <div class="cards-container card-container-form">
-    <article class="card card-color-1 card-1">
-      <div class="icon-container">
-        <img class="card-img" src="../static/images/svg/alternate-mobile.svg" />
-      </div>
-      <h1 class="title-color title-font title-size title-margin">Télécharger l'app</h1>
-      <p class="para-color para-font para-size para-margin">
-        "Tech Race App" est nécessaire pour que la voiture des enfers démarre.</p>
-      <a type="button" href="https://play.google.com/store/apps?hl=fr" class="btn-text-color-3 btn-size btn-font">
-        <img class="img-provider" src="../static/images/png/google-play-badge.png" alt="logo google play store"/>
-      </a>
+  <div class="w-full bg-quote container flex items-center justify-center h-screen mx-auto">
+    <blockquote class="bg-black font-serif mx-4 p-4 text-center text-white md:p-8">
+      <p class="font-bold italic text-3xl">
+        &ldquo;Large, bold pull quote. Hats. Very good.&rdquo;
+      </p>
+    </blockquote>
+  </div>
 
-    </article>
+  <div class="w-full font-serif leading-normal mx-auto py-12 px-4 max-w-lg">
+    <p class="mb-4 text-lg">Quae commodi reiciendis dignissimos. Rerum molestiae hic dolores assumenda dolor! Corrupti reiciendis maxime fuga, recusandae obcaecati officia cum temporibus dicta quibusdam praesentium, magni, cumque aperiam iusto sequi illum molestiae non.</p>
+    <p class="mb-4 text-lg">In excepturi repellendus eum, qui corrupti rerum perferendis harum adipisci voluptate? Nihil, quidem deleniti libero officia dicta vel asperiores velit molestiae blanditiis, dolore voluptatibus excepturi laudantium at veniam illo. Dolor!</p>
+    <p class="mb-4 text-lg">Neque laudantium minus doloremque id quas quod sint velit corporis unde dolore accusantium delectus optio consequuntur voluptatem sapiente odit dolorum minima harum tenetur, dolor provident reprehenderit. Ex eum provident harum?</p>
+    <p class="mb-4 text-lg">Mollitia temporibus maxime placeat culpa distinctio possimus, praesentium, assumenda quasi eum voluptate magni aspernatur aperiam. Eius voluptates rem eum, facilis inventore hic provident pariatur nam non! At odit iste cum.</p>
+  </div>
 
-    <article class="card card-color-2 card-2">
-      <div class="icon-container">
-        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="#fff" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-land-plot">
-          <path d="m12 8 6-3-6-3v10"/><path d="m8 11.99-5.5 3.14a1 1 0 0 0 0 1.74l8.5 4.86a2 2 0 0 0 2 0l8.5-4.86a1 1 0 0 0 0-1.74L16 12"/>
-          <path d="m6.49 12.85 11.02 6.3"/><path d="M17.51 12.85 6.5 19.15"/></svg>
-      </div>
-      <h1 class="title-color title-font title-size title-margin">Let's go !</h1>
-      <p class="para-color para-font para-size">Rends-toi sur l'application et connecte-toi &nbsp;: ceci connecte ton application à cette api et à la voiture.</p>
-      <p class="para-color para-font para-size">Tu es donc prêt à conduire ta voiture, amuse-toi bien !</p>
-    </article>
-
-    <article class="card card-color-3 card-3">
-      <div class="icon-container">
-        <img alt="outils" class="card-img --with-border" src="../static/images/svg/tools.svg" />
-      </div>
-      <h1 class="title-color title-font title-size title-margin">Nos services</h1>
-      <p class="para-color para-font para-size">Nos services de base rendu possible sur votre application : rouler en utilisant le joystick, consulter vos statistiques.</p>
-      <p class="para-color para-font para-size">Nous vous avons préparé d'autres outils éclatants : créer vos vidéos, passez en autopilote</p>
-
-    </article>
-
+  <div id="demos" class="target:flex hidden cards-container bg-bright-orange py-[40px] px-[10px] rounded-[4px]">
+    <div data-snack-id="@devvydream/ride-car-snack" data-snack-platform="android" data-snack-preview="true"
+         data-snack-theme="dark"
+         style="overflow:hidden;background:#fbfcfd;border-radius:4px;height:505px;width:100%"></div>
   </div>
 
 </main>
+<script async src="https://snack.expo.dev/embed.js"></script>
 </body>
 
 </html>
