--- a/views/tarifs.html
+++ b/views/tarifs.html
@@ -28,7 +28,7 @@
 
 </head>
 
-<body class="body-main">
+<body>
 
 <main class="main-page main-grid">
 
@@ -44,36 +44,27 @@
     <div class="cards-container card-container-form">
         <article class="card card-color-1 card-1">
             <div class="icon-container">
-                <img class="card-img" src="../static/images/svg/alternate-mobile.svg" />
+                <img class="card-img --with-border" src="../static/images/svg/free-delivery.svg" />
             </div>
-            <h1 class="title-color title-font title-size title-margin">Télécharger l'app</h1>
+            <h1 class="title-color title-font title-size title-margin">Free forever - 	0&#8364;</h1>
             <p class="para-color para-font para-size para-margin">
-                "Tech Race App" est nécessaire pour que la voiture Tech Race démarre.</p>
-            <a type="button" href="https://play.google.com/store/apps?hl=fr" class="btn-text-color-3 btn-size btn-font">
-                <img class="img-provider" src="../static/images/png/google-play-badge.png" alt="logo google play store"/>
-            </a>
-
+                Forfait gratuit pour l'utilisation de Tech Race via notre voiture de démo</p>
         </article>
 
         <article class="card card-color-2 card-2">
             <div class="icon-container">
-                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="#fff" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-land-plot">
-                    <path d="m12 8 6-3-6-3v10"/><path d="m8 11.99-5.5 3.14a1 1 0 0 0 0 1.74l8.5 4.86a2 2 0 0 0 2 0l8.5-4.86a1 1 0 0 0 0-1.74L16 12"/>
-                    <path d="m6.49 12.85 11.02 6.3"/><path d="M17.51 12.85 6.5 19.15"/></svg>
+                <img alt="outils" class="card-img --with-border" src="../static/images/svg/onboard.svg" />
             </div>
-            <h1 class="title-color title-font title-size title-margin">Let's go !</h1>
-            <p class="para-color para-font para-size">Rends-toi sur l'application et connecte-toi &nbsp;: ceci connecte ton application à cette api et à la voiture.</p>
-            <p class="para-color para-font para-size">Tu es donc prêt à conduire ta voiture, amuse-toi bien !</p>
+            <h1 class="title-color title-font title-size title-margin">Personal - 15&#8364; / mois </h1>
+            <p class="para-color para-font para-size">Achète ta propre voiture et loue l'API par mois.</p>
         </article>
 
         <article class="card card-color-3 card-3">
             <div class="icon-container">
-                <img alt="outils" class="card-img --with-border" src="../static/images/svg/tools.svg" />
+                <img alt="outils" class="card-img --with-border" src="../static/images/svg/corporate-fare.svg" />
             </div>
-            <h1 class="title-color title-font title-size title-margin">Nos services</h1>
-            <p class="para-color para-font para-size">Nos services de base rendu possible sur votre application : rouler en utilisant le joystick, consulter vos statistiques.</p>
-            <p class="para-color para-font para-size">Nous vous avons préparé d'autres outils éclatants : créer vos vidéos, passez en autopilote</p>
-
+            <h1 class="title-color title-font title-size title-margin">Entreprise - Nous consulter</h1>
+            <p class="para-color para-font para-size">Offre pour louer une flotte de voitures pour un évènement d'entreprise.</p>
         </article>
 
     </div>
