--- a/static/css/desktop.css
+++ b/static/css/desktop.css
@@ -2,7 +2,7 @@
 /* For Desktop and tablets */
 @media screen and (min-width:768px) {
 
-    body {
+    .body-main {
         background-color: var(--Very-light-gray);
         max-width: 100vw;
         padding: 0 10rem;
@@ -15,13 +15,16 @@
 
     .main-page {
         width: 100%;
-        height: 100vh;
+        min-height: 100vh;
         position: relative;
+    }
+
+    .main-grid {
         display: grid;
-        justify-content: center;
-        align-items: center;
         grid-template-columns: minmax(1fr, 50px) minmax(45rem, 3fr) minmax(1fr, 50px);
         grid-template-rows: 1fr auto 1fr;
+        justify-content: center;
+        align-items: center;
         row-gap: 50px;
     }
 
