--- a/views/docs.html
+++ b/views/docs.html
@@ -28,28 +28,20 @@
 </head>
 
 <body>
-<header class="title-container md:mx-4 fixed top-0">
+<header class="title-container fixed top-0">
   <h1 class="title-color title-font title-size title-margin">Documentation</h1>
-  <div class="flex gap-5 my-5">
+  <div class="flex gap-5 sm:my-5 flex-col sm:flex-row flex-wrap">
     <a href="/" class="font-lexend text-transparent-white text-lg hover:text-white">Accueil</a>
     <a href="#install" class="font-lexend text-transparent-white text-lg hover:text-white">Installation</a>
-    <a href="#api" class="font-lexend text-transparent-white text-lg hover:text-white">Routes API</a>
-    <a href="#demos" class="font-lexend text-transparent-white text-lg hover:text-white">Demo</a>
-    <a href="#services" class="font-lexend text-transparent-white text-lg hover:text-white">Services</a>
-    <a href="#legal" class="font-lexend text-transparent-white text-lg hover:text-white">Legal</a>
+    <a href="#demos" class="font-lexend text-transparent-white text-lg hover:text-white">Demos</a>
+    <a href="#services" class="font-lexend text-transparent-white text-lg hover:text-white">Nos Services</a>
   </div>
 </header>
-<main class="docs-page md:px-4 pt-[242px]">
-  <section class="bg-header w-full flex items-start justify-center h-screen pb-12">
-    <div class="mt-5 font-lexend mx-4 p-4 text-center md:p-8 aspect-video w-96 rounded-xl bg-white/20 shadow-lg ring-1 ring-black/5">
-      <p class="italic text-sm">
-        November 1, 2019
-      </p>
-      <h1 class="text-5xl uppercase">
-        Article Title
-      </h1>
-      <p class="text-lg">
-        Author Name
+<main class="docs-page px-0 pt-[346px] sm:pt-[242px]">
+  <section class="relative min-h-[500px] bg-header w-full flex items-end justify-center pb-12">
+    <div class="mt-2 absolute top-0 right-3 font-lexend flex gap-5 justify-center items-center mx-4 p-2 text-center md:p-4 w-96 rounded-xl bg-white/20 shadow-lg ring-1 ring-black/5">
+      <p class="text-lg uppercase text-center">
+        Tech Race API - version 8
       </p>
     </div>
   </section>
