--- a/static/css/main.css
+++ b/static/css/main.css
@@ -211,9 +211,9 @@ img.--with-border {
 .bg-header {
     /*https://picsum.photos/1920/1920/?random*/
     background: url(../images/carpng.png) center center no-repeat;
-    background-size: 50%;
+    background-size: 100%;
     background-color: #444444;
-    background-position: bottom;
+    background-position: center;
     background-attachment: fixed;
 }
 
