feat(docs): simplify documentation

--- a/views/docs.html
+++ b/views/docs.html
@@ -32,9 +32,9 @@
   <h1 class="title-color title-font title-size title-margin">Documentation</h1>
   <div class="flex gap-5 sm:my-5 flex-col sm:flex-row flex-wrap">
     <a href="/" class="font-lexend text-transparent-white text-lg hover:text-white">Accueil</a>
-    <a href="#install" class="font-lexend text-transparent-white text-lg hover:text-white">Installation</a>
+<!--    <a href="#install" class="font-lexend text-transparent-white text-lg hover:text-white">Installation</a>-->
     <a href="#demos" class="font-lexend text-transparent-white text-lg hover:text-white">Demos</a>
-    <a href="#services" class="font-lexend text-transparent-white text-lg hover:text-white">Nos Services</a>
+<!--    <a href="#services" class="font-lexend text-transparent-white text-lg hover:text-white">Nos Services</a>-->
   </div>
 </header>
 <main class="docs-page px-0 pt-[346px] sm:pt-[242px]">
