--- a/views/index.html
+++ b/views/index.html
@@ -36,7 +36,8 @@
         <h1 class="title-color title-font title-size title-margin">API de Tech Race</h1>
         <p class="para-color para-font para-size">Bienvenue sur l'API qui permet à la voiture Tech Race de rouler !</p>
         <div class="flex gap-5 my-5">
-            <a href="/docs" class="font-lexend text-transparent-white text-lg hover:text-white">Documentation</a>
+            <a href="https://github.com/NasssDev/Tech-Race/blob/main/README.md" class="font-lexend text-transparent-white text-lg hover:text-white">Documentation</a>
+            <a href="/docs#demos" class="font-lexend text-transparent-white text-lg hover:text-white">Démo</a>
             <a href="/tarifs" class="font-lexend text-transparent-white text-lg hover:text-white">Tarifs</a>
         </div>
     </div>
